--- a/package.json
+++ b/package.json
@@ -4,7 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "watch-server": "NODE_ENV=development nodemon --watch 'app.js'",
+    "start": "node ./dist/server/index.js",
+    "clean": "rm -rf dist",
+    "compile": "BABEL_ENV=production babel index.js --out-dir dist --copy-files --source-maps --extensions \".js\" --ignore \"src/test/**\"",
+    "lint": "eslint src/**",
+    "mocha": "BABEL_ENV=test nyc mocha --require ./src/test/index.js 'src/test/unit/**/*.js'",
+    "flow": "flow",
+    "flow:delete": "find ./src/server -name *.flow -delete",
+    "flow:generate": "flow-copy-source -v ./src/server ./dist/server",
+    "pretest": "yarn flow:delete && run-p clean lint flow",
+    "posttest": "yarn compile && yarn flow:generate",
+    "test": "BABEL_ENV=test yarn mocha"
   },
   "repository": {
     "type": "git",
@@ -15,5 +26,42 @@
   "bugs": {
     "url": "https://github.com/sugarandmagic/recombot/issues"
   },
-  "homepage": "https://github.com/sugarandmagic/recombot#readme"
+  "homepage": "https://github.com/sugarandmagic/recombot#readme",
+  "dependencies": {
+    "@slack/client": "^4.1.0",
+    "arrow-mocha": "^1.0.1",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-eslint": "^8.2.3",
+    "babel-plugin-rewire": "^1.1.0",
+    "babel-plugin-transform-flow-strip-types": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babel-runtime": "^6.26.0",
+    "chai": "^4.1.2",
+    "chai-as-promised": "^7.1.1",
+    "concurrently": "^3.5.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-flowtype": "^2.46.2",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "fecha": "^2.3.3",
+    "fetch-mock": "^6.3.0",
+    "firebase": "^4.12.1",
+    "flow-bin": "^0.69.0",
+    "flow-copy-source": "^1.3.0",
+    "ignore-styles": "^5.0.1",
+    "mocha": "^5.1.0",
+    "mocha-sinon": "^2.0.0",
+    "node-cron": "^1.2.1",
+    "nodemon": "^1.17.3",
+    "npm-run-all": "^4.1.2",
+    "nyc": "^11.6.0",
+    "regenerator-runtime": "^0.11.1",
+    "sinon": "^4.5.0",
+    "sinon-chai": "^3.0.0"
+  }
 }
