--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch-server": "NODE_ENV=development nodemon --watch 'app.js'",
-    "start": "node ./dist/index.js",
+    "start": "npm install && npm run compile && node ./dist/index.js",
     "clean": "rm -rf dist",
     "compile": "BABEL_ENV=production babel \"*.js\" --out-dir dist --copy-files --source-maps --extensions \".js\" --ignore \"src/test/**\"",
     "lint": "eslint src/**",
